--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     height:100vh;
     margin:0;
     overflow: hidden;
+    font-family: Roboto, sans-serif;
 }
 
 ul {
@@ -18,6 +21,20 @@ a {
 }
 
 img {
+    width:200px;
+    height:200spx;
+}
+
+button {
+    padding: 8px 16px;
+    font-family: Roboto, sans-serif;
+    border:none;
+    border-radius: 8px;
+    color:white;
+    background:#f63848;
+}
+
+#logo {
     width:80px;
     height: auto;
 }
@@ -29,4 +46,72 @@ img {
     background-color: rgb(129, 67, 67);
     justify-content: space-between;
     align-items: center;
+}
+
+.headertext {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.content {
+    flex:1;
+}
+
+.section1 {
+    padding:8px;
+    height:30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: green;
+    gap:100px;
+}
+
+.thetexts {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:10px;
+}
+
+.BIGTEXT {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.SMALLERTEXT {
+    font-size: 18px;
+    color: #E5E7EB
+}
+
+.section2 {
+    background-color: aqua;
+    text-align: center;
+}
+
+.images {
+    padding: 40px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.info {
+    max-width: 400px;
+}
+
+.infotext {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937
+}
+
+.text {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: lighter;
+    font-style: italic;
 }
