--- a/style.css
+++ b/style.css
@@ -21,8 +21,10 @@ a {
 }
 
 img {
-    width:200px;
-    height:200spx;
+    max-width: 100%;
+    height:auto;
+    /* flex: 1 1 auto;
+    object-fit: cover; */
 }
 
 button {
@@ -34,13 +36,8 @@ button {
     background:#f63848;
 }
 
-#logo {
-    width:80px;
-    height: auto;
-}
-
 .header {
-    height: 7vh;
+    height: 2vh;
     display: flex;
     padding: 15px;
     background-color: rgb(129, 67, 67);
@@ -54,13 +51,27 @@ button {
     font-weight: bold;
 }
 
+.footer {
+    height:2vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding:15px;
+    background-color: rgb(99, 50, 50);
+}
+
+.copyright {
+    font-size:13px;
+    color: #F9FAF8;
+}
+
 .content {
     flex:1;
 }
 
 .section1 {
     padding:8px;
-    height:30vh;
+    height:22vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,7 +97,15 @@ button {
     color: #E5E7EB
 }
 
+.thumbnail {
+    max-width: 200px;
+    max-height: 200px;
+}
+
 .section2 {
+    display: flex;
+    flex-direction: column;
+    height:27vh;
     background-color: aqua;
     text-align: center;
 }
@@ -96,11 +115,34 @@ button {
     background-color: red;
     display: flex;
     justify-content: center;
-    gap: 50px;
+    align-items: center;
 }
 
+.bingo {
+    max-width: 50%;
+    max-height: 50%;
+}
+
+
 .info {
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+    flex-direction: column; */
     max-width: 400px;
+}
+
+.section3 {
+    display: flex;
+    background-color: purple;
+    height:22vh
+}
+
+.section4 {
+    display: flex;
+    background-color: yellow;
+    height:17vh
 }
 
 .infotext {
@@ -110,7 +152,7 @@ button {
 }
 
 .text {
-    font-size: 36px;
+    font-size: 20px;
     color: #1F2937;
     font-weight: lighter;
     font-style: italic;
