--- a/style.css
+++ b/style.css
@@ -5,26 +5,22 @@ body {
     margin:0;
     overflow: hidden;
     font-family: Roboto, sans-serif;
+    background-color: rgb(129, 67, 67);
+}
+
+ul li {
+  list-style-type: none;
 }
 
 ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap:8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 a {
     text-decoration: none;
     color:rgb(179, 175, 175)
-}
-
-img {
-    max-width: 100%;
-    height:auto;
-    /* flex: 1 1 auto;
-    object-fit: cover; */
 }
 
 button {
@@ -36,16 +32,43 @@ button {
     background:#f63848;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: var(--transition);
+}
+
 .header {
     display: flex;
-    padding: 15px;
+    padding: 1rem 1.5rem;
+    box-shadow: 2px 3px 2px #9e9999;
     background-color: rgb(129, 67, 67);
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    position: sticky;
+        top: 0;
+        left: 0;
+        z-index: 1;
+}
+
+.nav-item {
+    margin-left: 2rem;
+}
+
+.nav-link {
+    font-weight: bold   
+}
+
+.hamburger {
+  display: none;
 }
 
 .headertext {
-    font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
 }
@@ -67,43 +90,58 @@ button {
 .content {
     flex:1;
 }
-
-.section1 {
-    padding:8px;
-    height:23vh;
+.hero {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    gap: 1.9rem;
+    max-width: 1100px;
     background-color: rgb(129, 67, 67);
-    gap:100px;
+    margin: 2rem auto -6rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0.8rem 0.6rem;
+    height: 50px;
+    width: 100px;
+    border: none;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    color: #fff;
+    background-color: black;
+    margin-bottom: 1rem;
+}
+
+.thumbnail {
+    max-width: 20rem;
 }
 
 .thetexts {
     display:flex;
+    flex-basis: auto;
     flex-direction: column;
     justify-content: center;
     gap:10px;
-}
+} 
 
 .BIGTEXT {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    margin-bottom: 0.5rem;
 }
 
 .SMALLERTEXT {
+    margin-bottom: 0.5rem;
     font-size: 18px;
-    color: #E5E7EB
-}
-
-.thumbnail {
-    max-width: 150%;
-    max-height: 100%;
+    color: #E5E7EB;
 }
 
 .section2 {
     display: flex;
-    height:25vh;
+    height:200px;
+    margin-top: 1rem;
     flex-direction: column;
     background-color: aqua;
     text-align: center;
